# wafl

./: .gitignore  ChangeLog.md  README.md  wafl.cabal
.github/workflows/: ci.yml
main/: waflr.hs
src/: Wafl.hs
src/Wafl/: Naming.hs  Parser.hs  PreSyntax.hs  Pretty.hs  Stepper.hs  Syntax.hs
