name:                wafl
version:             0.0.0.0
synopsis:            Yummy Wafl
description:         A simple language in ANF
homepage:            https://github.com/lambdageek/wafl
license:             MIT
license-file:        LICENSE
author:              Aleksey Kliger
maintainer:          Aleksey Kliger
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2, GHC == 8.10.1

library
  exposed-modules:     Wafl,
                       Wafl.Naming,
                       Wafl.Syntax,
                       Wafl.Stepper,
                       Wafl.Pretty,
                       Wafl.PreSyntax,
                       Wafl.Parser
  -- other-modules:       
  default-extensions:  MultiParamTypeClasses, FlexibleInstances, FlexibleContexts
  build-depends:       base >=4.9 && < 5,
                       unbound-generics,
                       containers >= 0.5.8.2,
                       mtl >= 2.2.1,
                       ansi-wl-pprint >= 0.6.7,
                       megaparsec >= 6.2.0,
                       text >= 1.2.2.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

-- executable waflr
--   main-is:             waflr.hs
--   hs-source-dirs:      main
--   build-depends:       base >=4.9,
--                        wafl
--   default-language:    Haskell2010
--   other-extensions:    MultiParamTypeClasses
--   ghc-options:         -Wall

source-repository head
  type:                git
  location:            git://github.com/lambdageek/wafl.git

